# intagli-core

./: .gitignore  README.md  compile_commands.json  meson.build
.cache/clangd/index/: helloworld.c.4727D0DE93AF50B8.idx  intagli.c.344C14E0C5B78DAD.idx  intagli.h.001A24202209795B.idx  intagli_definitions.h.689A431BE53F975D.idx  intagli_types.h.776D5AA1D321C0E3.idx  intagli_wayland.h.D49D6C9A5E6F5AC6.idx  internal.h.435D6553C6BEDFC8.idx  xdg-shell.h.84D3CE1C14C8EE6B.idx
include/intagli/: intagli.h  intagli_definitions.h  intagli_types.h  intagli_wayland.h  intagli_widgets.h  internal.h
src/: intagli.c  intagli_types.c  intagli_wayland.c  meson.build
test/: helloworld.c  meson.build
